--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   nextjs:
     build: .
-    container_name: lahiruTraders-web
+    container_name: lahirutraders-web
     ports:
       - "3000:3000"
     environment:
